@@ -5,6 +5,16 @@ ISODE_INCLUDE
 CONFIG_RULES
 AC_SET_BUILDTOP
 AC_PROG_INSTALL
+dnl
+dnl Check for where the BSD rlogin, rcp, and rsh programs live.
+dnl
+save_path=$PATH
+PATH=/usr/bsd:/usr/ucb:/bin:/usr/bin
+AC_PATH_PROG(UCB_RLOGIN,rlogin,/usr/ucb/rlogin)
+AC_PATH_PROG(UCB_RSH,rsh,/usr/ucb/rsh)
+AC_PATH_PROG(UCB_RCP,rcp,/usr/ucb/rcp)
+PATH=$save_path
+dnl
 AC_CHECK_LIB(socket,main)
 AC_CHECK_LIB(nsl,main)
 dnl dbm libs for use of an_to_ln
